# DevNet

./: .gitignore  README.md  nx_api_cli_cdp.py  nx_api_rest.py  nxapi_cli.py
Ansible/: conditional.yml  conditional_facts.yml  delete_nexus_loopback.yml  ios_xe_show.yml  loops.yml
Ansible/RESTCONF/: restconf_get.yml
CUCM/: uds_get_users.py
Collaboration/: uds_get_users.py  webex_create_room.py  webex_create_team.py  webex_sdk.py
DNA-C/: dnac_sdk_health_checks.py  dnac_sdk_network_info.py
DevNet-Associate/ACI/: aci_toolkit_script.py
DevNet-Associate/Ansible/: cisco_nx_os_facts.yml  create_nexus_loopback.yml  facts.yml  ios_xe_facts.yaml  stats.yaml  vars.yaml
DevNet-Associate/DNA-C/: dnac_sdk_device_info.py  get_client_health.py
DevNet-Associate/NX-API/: nx_api_cli_cdp.py  nxapi_cli.py
DevNet-Associate/Powershell/: dnac.ps1  meraki.ps1
DevNet-Associate/SD-WAN/: sdwan_bfd,py.py  vmanage_get_devies.py
DevNet-Associate/Security/: asa.py  fmc_create_policy_and_access_rules.py  (+1 more)
DevNet-Professional/DevCore/PyPi-package/packaging-tutorial/: README.md  pyproject.toml
DevNet-Professional/DevCore/PyPi-package/packaging-tutorial/src/example_package_ssaeed/: myApi.py
DevNet-Professional/DevCore/PyPi-package/packaging-tutorial/src/packaging_tutorial_ssaeed.egg-info/: PKG-INFO
Docker/: Dockerfile  my_api.py
Meraki/: get_orgs.py  meraki_sdk_vlans.py
NSO/: nso_get_device.py
NX-API/: nx_api_rest.py
Powershell/: aci.ps1  restconf.ps1  sdwan.ps1
SD-WAN/: tloc_summ.py
Security/: fmc_get_access_policies.py
UCS/: ucs.py
Unit Tests/: test_example.py
(+560 files in other folders)
